--- a/css/style.css
+++ b/css/style.css
@@ -331,12 +331,17 @@ padding: 10px;
     align-items: center;
 }
 
-/*-------------- Responsive ------------- */
 
-@media (min-width:481px) and (max-width:767px){
+/*--------------------------------------- */
+/*-------------- Responsive ------------- */
+/*--------------------------------------- */
+
+
+
+@media (min-width:320px) and (max-width:480px){
 
     .banner {
-        min-height: 90vh;
+        min-height: 40vh;
     }
     
     section {
@@ -350,264 +355,88 @@ padding: 10px;
     
     /*-------------- HEADER ------------- */
 
+    header{
+        padding: 10px;
+    }
     
     .logo {
-        font-size: 0.9em;
+        font-size: 0.7em;
     }
     
     .logo span {
-        font-size: 0.9em;
+        font-size: 0.7em;
     }
     
-
+.navbar{
+    margin-right: 10px;
+}
     .navbar li {
-        margin-left: 10px;
-        margin-right: 10px;
+        margin-right: 6px;
+        margin-left: 6px;
     }
     
     .navbar li a {
-        font-size: 1em;
+        font-size: 0.8em;
     }
     
     .navbar li a:hover {
-        font-size: 1.2em;
+        font-size: 0.9em;
     }
     
     header.sticky {
-        padding: 10px 20px;
+        padding: 5px 10px;
     }
     
     .sticky{
         width:100%;
     }
-    
-    /*-------------- CONTENT------------- */
-    
-    .content {
-        margin-top: 120px;
-        width: 60%;
-        height: 50vh;
-        text-align: center;
-    }
-    
-    .content h1 {
-        font-family: 'Roboto Slab', serif;
-        font-size: 5em;
-        font-weight: bolder;
-        color: white;
-    }
-    
-    .content h2 {
-        font-family: 'Roboto Slab', serif;
-        font-size: 3em;
-        font-weight: bolder;
-        color: yellow;
-    }
-    
-    .content p {
-        font-size: 1em;
-        color: white;
-        font-weight: bolder;
-    }
-    
-    
-    .btn {
-        font-size: 1em;
-        color: white;
-        background-color: brown;
-        display: inline-block;
-        padding: 10px 30px;
-        margin-top: 30px;
-        text-decoration: none;
-        text-transform: uppercase;
-        letter-spacing: 2px;
-        transform: 0.5s;
-    }
-    
-    .btn:hover {
-        letter-spacing: 4px;
-        color: yellow;
-    }
-    
-    /*-------------- ABOUT------------- */
-    
-    .about {
-        color: black;
-        width: 100%;
-    }
-    
-    .row {
-        display: flex;
-        justify-content: space-between;
-        letter-spacing: 3px;
-    }
-    
-    .imgAb img {
-        position: relative;
-        top: 0;
-        left: 0;
-        width: 40vw;
-        height: 60vh;
-        object-fit: cover;
-    }
-    
-    /*-------------- MENU------------- */
-    
-    .menu {
-        color: black;
-        width: 100%;
-    }
-    
-    .menu .title {
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-    }
-    
-    .dishes {
-        display: flex;
-        justify-content: center;
-        flex-direction: row-reverse;
-        flex-wrap: wrap;
-        margin-top: 30px;
-    }
-    
-    .box {
-        padding: 5px;
-        width: 22vw;
-        height: 50vh;
-        margin: 2px;
-        border: 1px solid black;
-        box-shadow: 5px 5px 35px rgba(0, 0, 0, 0.4);
-    }
-    
-    .imgMenu {
-        position: relative;
-        width: 100%;
-        height: 40vh;
-    }
-    
-    
-    .imgMenu img {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
-    
-    .text {
-        padding: 15px 5px;
-        text-align: center;
-    }
-    
-    .text h3 {
-        font-family: 'Roboto Slab', serif;
-        font-size: 1.5em;
-        font-weight: bolder;
-    
-    }
-    
-    /*-------------- CONTACT------------- */
-    
-    #contact {
-        color: black;
-        background: url("../img/banner.jpg") no-repeat fixed;
-        background-size: cover;
-        width: 100%;
-    }
-    
-    #contact .aboutTitle span {
-        color: white;
-    }
-    
-    
-    .form {
-        padding: 30px;
-        background: white;
-        box-shadow: 0 15px 50px rgba(0, 0, 0, 0.4);
-        width:80%;
-        margin:auto;
-    }
-    
-    .form h3 {
-        color: black;
-        font-size: 1.2em;
-        margin-bottom: 10px;
-        font-weight: bolder;
-    }
-    
-    .inputBox {
-        display: flex;
-        justify-content: center;
-        width: 100%;
-        padding-left:50px;
-        padding-right:50px;
-        margin-bottom:10px;
-    }
-    
-    
-    .inputBox input {
-        margin-left: 20px;
-        text-align: center;
-        font-weight: bolder;
-        font-family: 'Roboto Slab', serif;
-        font-size: 1em;
-        width: 100%;
-        border: px solid blueviolet;
-        outline: none;
-        border-radius: 10px;
-    }
-    
-    .inputBox textarea {
-        width: 100%;
-        padding: 10px;
-        border: 1px solid blueviolet;
-        font-weight: bolder;
-        font-family: 'Roboto Slab', serif;
-        font-size: 1em;
-        outline: none;
-        resize: none;
-        border-radius: 20px;
-    }
-    
-    .inputBox input[type="submit"] {
-        font-size: 1em;
-        color: white;
-        background: red;
-        text-transform: uppercase;
-        text-decoration: none;
-        letter-spacing: 2px;
-        transition: 0.5s;
-        width: 10vw;
-        height: 7vh;
-        border: none;
-        cursor: pointer;
-    }
-    
-    
-    /*-------------- footer------------- */
-    
-    
-    .footer {
-        font-family: 'Roboto Slab', serif;
-    padding: 10px;
-        font-size: 1em;
-        background-color: black;
-        color: yellow;
-        font-weight: bolder;
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
+
+/*-------------- CONTENT------------- */
+
+.content {
+    margin-top: 50px;
+    width: 50%;
+}
+
+.content h1 {
+    font-size: 2.5em;
+}
+
+.content h2 {
+    font-size: 1.5em;
+}
+
+.content p {
+    font-size: 0.8em;
+}
+
+
+.btn {
+    font-size: 0.8em;
+    padding: 5px 10px;
+    margin-top: 15px;
+    letter-spacing: 2px;
+}
+
+.btn:hover {
+    letter-spacing: 4px;
+}
+
+
+
+
 
 }
 
-@media (min-width:768px) and (max-width:1024px){
+
+
+
+@media (min-width:481px) and (max-width:768px){
+
+
+}
+
+@media (min-width:76px) and (max-width:1024px){
 
     
 }
