--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,12 @@
 body{
     width:100%;
 }
+
 .banner {
     position: relative;
     background: url("../img/bg.jpg") no-repeat fixed;
     background-size: cover;
     width: 100%;
-    min-height: 80vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -338,16 +338,12 @@ padding: 10px;
 
 
 
-@media (min-width:320px) and (max-width:480px){
+@media (min-width:320px) and (max-width:399px){
 
-    .banner {
-        min-height: 40vh;
-    }
-    
+
     section {
-        padding: 15px;
+        padding: 10px;
     }
-    
     
     .aboutTitle {
         font-size: 2em;
@@ -387,10 +383,6 @@ padding: 10px;
         padding: 5px 10px;
     }
     
-    .sticky{
-        width:100%;
-    }
-
 /*-------------- CONTENT------------- */
 
 .content {
@@ -399,22 +391,24 @@ padding: 10px;
 }
 
 .content h1 {
-    font-size: 2.5em;
+    font-size: 3em;
 }
 
 .content h2 {
     font-size: 1.5em;
+    margin-top: 10px;
 }
 
 .content p {
     font-size: 0.8em;
+    margin-top: 10px;
 }
 
 
 .btn {
     font-size: 0.8em;
     padding: 5px 10px;
-    margin-top: 15px;
+    margin-top: 10px;
     letter-spacing: 2px;
 }
 
@@ -423,8 +417,180 @@ padding: 10px;
 }
 
 
+/*-------------- ABOUT------------- */
 
 
+.row {
+    letter-spacing: 1px;
+}
+
+.row p {
+ font-size: 10px;
+}
+
+
+.imgAb img {
+    width: 50vw;
+    height: 40vh;
+}
+
+/*-------------- MENU------------- */
+
+
+
+.dishes {
+    display: flex;
+  flex-direction: column;
+}
+
+.box {
+    padding: 10px;
+    width: 100%;
+    height: 50%;
+    margin-top: 10px;
+}
+
+.imgMenu {
+    width: 100%;
+    height: 30vh;
+}
+
+.text {
+    padding: 10px 5px;
+}
+
+.text h3 {
+    font-size: 1.5em;
+}
+
+
+}
+
+
+
+@media (min-width:400px) and (max-width:480px){
+
+    section {
+        padding: 10px;
+    }
+    
+    .aboutTitle {
+        font-size: 2em;
+    }
+    
+    /*-------------- HEADER ------------- */
+
+    header{
+        padding: 15px;
+    }
+    
+    .logo {
+        font-size: 0.9em;
+    }
+    
+    .logo span {
+        font-size: 0.9em;
+    }
+    
+.navbar{
+    margin-right: 10px;
+}
+    .navbar li {
+        margin-right: 6px;
+        margin-left: 6px;
+    }
+    
+    .navbar li a {
+        font-size: 0.9em;
+    }
+    
+    .navbar li a:hover {
+        font-size: 1em;
+    }
+    
+    header.sticky {
+        padding: 10px 10px;
+    }
+    
+/*-------------- CONTENT------------- */
+
+.content {
+    margin-top: 50px;
+    width: 50%;
+}
+
+.content h1 {
+    font-size: 3em;
+}
+
+.content h2 {
+    font-size: 1.5em;
+    margin-top: 10px;
+}
+
+.content p {
+    font-size: 0.8em;
+    margin-top: 10px;
+}
+
+
+.btn {
+    font-size: 0.8em;
+    padding: 5px 10px;
+    margin-top: 10px;
+    letter-spacing: 2px;
+}
+
+.btn:hover {
+    letter-spacing: 4px;
+}
+
+
+/*-------------- ABOUT------------- */
+
+
+.row {
+    letter-spacing: 1px;
+}
+
+.row p {
+ font-size: 10px;
+}
+
+
+.imgAb img {
+    width: 50vw;
+    height: 40vh;
+}
+
+/*-------------- MENU------------- */
+
+
+
+.dishes {
+    display: flex;
+  flex-direction: column;
+}
+
+.box {
+    padding: 10px;
+    width: 100%;
+    height: 50%;
+    margin-top: 10px;
+}
+
+.imgMenu {
+    width: 100%;
+    height: 30vh;
+}
+
+.text {
+    padding: 10px 5px;
+}
+
+.text h3 {
+    font-size: 1.5em;
+}
 
 }
 
@@ -433,6 +599,128 @@ padding: 10px;
 
 @media (min-width:481px) and (max-width:768px){
 
+
+    section {
+        padding: 15px;
+    }
+    
+    .aboutTitle {
+        font-size: 2.2em;
+    }
+    
+    /*-------------- HEADER ------------- */
+
+    header{
+        padding: 20px;
+    }
+    
+    .logo {
+        font-size: 1em;
+    }
+    
+    .logo span {
+        font-size: 1em;
+    }
+    
+.navbar{
+    margin-right: 10px;
+}
+    .navbar li {
+        margin-right: 8px;
+        margin-left: 8px;
+    }
+    
+    .navbar li a {
+        font-size: 1.1em;
+    }
+    
+    .navbar li a:hover {
+        font-size: 1.2em;
+    }
+    
+    header.sticky {
+        padding: 10px 20px;
+    }
+    
+/*-------------- CONTENT------------- */
+
+.content {
+    margin-top: 80px;
+    width: 50%;
+}
+
+.content h1 {
+    font-size: 3em;
+}
+
+.content h2 {
+    font-size: 1.8em;
+    margin-top: 10px;
+}
+
+.content p {
+    font-size: 1em;
+    margin-top: 10px;
+}
+
+
+.btn {
+    font-size: 1em;
+    padding: 5px 10px;
+    margin-top: 10px;
+    letter-spacing: 2px;
+}
+
+.btn:hover {
+    letter-spacing: 4px;
+}
+
+
+/*-------------- ABOUT------------- */
+
+
+.row {
+    letter-spacing: 2px;
+}
+
+.row p {
+ font-size: 15px;
+}
+
+
+.imgAb img {
+    width: 50vw;
+    height: 45vh;
+}
+
+/*-------------- MENU------------- */
+
+
+
+.dishes {
+    display: flex;
+  flex-direction: column;
+}
+
+.box {
+    padding: 10px;
+    width: 100%;
+    height: 50%;
+    margin-top: 10px;
+}
+
+.imgMenu {
+    width: 100%;
+    height: 30vh;
+}
+
+.text {
+    padding: 10px 5px;
+}
+
+.text h3 {
+    font-size: 1.5em;
+}    
 
 }
 
