--- a/css/style.css
+++ b/css/style.css
@@ -475,7 +475,7 @@ header.sticky {
         padding: 5px;
         width: 100%;
         margin: auto;
-        height: 35vh;
+        height: 38vh;
         margin-top: 10px;
     }
 
@@ -660,7 +660,7 @@ header.sticky {
         padding: 5px;
         width: 100%;
         margin: auto;
-        height: 40vh;
+        height: 43vh;
         margin-top: 10px;
     }
 
@@ -846,7 +846,7 @@ header.sticky {
         padding: 5px;
         width: 100%;
         margin: auto;
-        height: 40vh;
+        height: 43vh;
         margin-top: 10px;
     }
 
@@ -1029,7 +1029,7 @@ header.sticky {
         padding: 5px;
         width: 100%;
         margin: auto;
-        height: 40vh;
+        height: 43vh;
         margin-top: 10px;
     }
 
@@ -1207,7 +1207,7 @@ header.sticky {
         padding: 5px;
         width: 100%;
         margin: auto;
-        height: 45vh;
+        height: 48vh;
         margin-top: 10px;
     }
 
@@ -1263,6 +1263,9 @@ header.sticky {
 
 /*-------------- Responsive 1025x1280 ------------- */
 
-@media (min-width:1025px) and (max-width:1280px) {}
+@media (min-width:1025px) and (max-width:1280px) {
+
+    
+}
 
 /*--------------            ------------- */
